--- a/compose.yml
+++ b/compose.yml
@@ -50,7 +50,7 @@ services:
       - WORDPRESS_DB_PASSWORD=wordpress
       - WORDPRESS_DB_NAME=wordpress
     volumes:
-      - wordpress-data:/var/www/html
+      - ./plugins:/var/www/html/wp-content/plugins
 
   wordpress_db:
     image: mysql:5.7
